Use list of resolutions for limiter

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -66,13 +66,13 @@ DdrawWriteToGDI            = 0
 DdrawEnableMouseHook       = 0
 DdrawDisableDirect3DCaps   = 0
 DdrawLimitDisplayModeCount = 0
+DdrawCustomWidth           = 0
+DdrawCustomHeight          = 0
 DdrawUseNativeResolution   = 0
 DdrawClippedWidth          = 0
 DdrawClippedHeight         = 0
 DdrawOverrideWidth         = 0
 DdrawOverrideHeight        = 0
-DdrawOverridePrimaryWidth  = 0
-DdrawOverridePrimaryHeight = 0
 DdrawOverrideStencilFormat = 0
 DdrawIntegerScalingClamp   = 0
 DdrawMaintainAspectRatio   = 0
