--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -52,6 +52,8 @@ DdrawReadFromGDI           = 0
 DdrawWriteToGDI            = 0
 DdrawDisableDirect3DCaps   = 0
 DdrawLimitDisplayModeCount = 0
+DdrawCustomWidth           = 0
+DdrawCustomHeight          = 0
 DdrawUseNativeResolution   = 0
 DdrawOverrideWidth         = 0
 DdrawOverrideHeight        = 0
