--- a/Stub/stub.vcxproj
+++ b/Stub/stub.vcxproj
@@ -200,9 +200,15 @@ copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\Stub\wsock32.dll" &gt
     <ClCompile Include="..\External\MemoryModule\MemoryModule.c" />
     <ClCompile Include="..\Settings\ReadParse.cpp" />
     <ClCompile Include="..\Wrappers\wrapper.cpp" />
-    <ClCompile Include="d3d8.cpp" />
-    <ClCompile Include="ddraw.cpp" />
-    <ClCompile Include="dinput.cpp" />
+    <ClCompile Include="d3d8.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release_xp|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="ddraw.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release_xp|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="dinput.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release_xp|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="Logging\Logging.cpp" />
     <ClCompile Include="stub.cpp" />
   </ItemGroup>
