--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -94,7 +94,7 @@ FullscreenWindowMode       = 0
 ForceExclusiveFullscreen   = 0
 ForceMixedVertexProcessing = 0
 ForceSystemMemVertexCache  = 0
-D3d9DisableSwapEffectShim  = 0
+SetSwapEffectShim          = 0
 ForceDirect3D9On12         = 0
 GraphicsHybridAdapter      = 0
 
