--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -77,6 +77,7 @@ ForceExclusiveFullscreen   = 0
 ForceMixedVertexProcessing = 0
 ForceSystemMemVertexCache  = 0
 SetSwapEffectShim          = 0
+DisableMaxWindowedMode     = 0
 ForceDirect3D9On12         = 0
 GraphicsHybridAdapter      = 0
 
