Add feature to emulate lock
Required for Wizardry 8

--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -45,6 +45,7 @@ DdrawOverrideBitMode       = 0
 [Dd7to9]
 DdrawAutoFrameSkip         = 0
 DdrawEmulateSurface        = 0
+DdrawEmulateLock           = 0
 DdrawFixByteAlignment      = 0
 DdrawRemoveScanlines       = 0
 DdrawRemoveInterlacing     = 0
