--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -46,6 +46,7 @@ DdrawOverrideBitMode       = 0
 DdrawAutoFrameSkip         = 0
 DdrawEmulateSurface        = 0
 DdrawEmulateLock           = 0
+DdrawFlipFillColor         = 0
 DdrawFixByteAlignment      = 0
 DdrawRemoveScanlines       = 0
 DdrawRemoveInterlacing     = 0
