Add more options for byte alignment
#260

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -61,6 +61,7 @@ DdrawEmulateSurface        = 0
 DdrawEmulateLock           = 0
 DdrawFlipFillColor         = 0
 DdrawFixByteAlignment      = 0
+DdrawDisableByteAlignment  = 0
 DdrawRemoveScanlines       = 0
 DdrawRemoveInterlacing     = 0
 DdrawReadFromGDI           = 0
