--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -48,6 +48,7 @@ DdrawEmulateSurface        = 0
 DdrawEmulateLock           = 0
 DdrawFlipFillColor         = 0
 DdrawFixByteAlignment      = 0
+DdrawDisableByteAlignment  = 0
 DdrawRemoveScanlines       = 0
 DdrawRemoveInterlacing     = 0
 DdrawReadFromGDI           = 0
