--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -58,6 +58,7 @@ DirectShowEmulation        = 0
 DdrawAutoFrameSkip         = 0
 DdrawEmulateSurface        = 0
 DdrawEmulateLock           = 0
+DdrawForceMipMapAutoGen    = 0
 DdrawFlipFillColor         = 0
 DdrawFixByteAlignment      = 0
 DdrawDisableByteAlignment  = 0
