--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -45,6 +45,7 @@ DdrawOverrideBitMode       = 0
 DdrawAutoFrameSkip         = 0
 DdrawEmulateSurface        = 0
 DdrawEmulateLock           = 0
+DdrawForceMipMapAutoGen    = 0
 DdrawFlipFillColor         = 0
 DdrawFixByteAlignment      = 0
 DdrawDisableByteAlignment  = 0
