Add UseRawInputForDInput8 option

--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -91,6 +91,7 @@ WaitForWindowChanges       = 0
 
 [dinput8]
 FilterNonActiveInput       = 0
+UseRawInputForDInput8      = 0
 
 [dsound]
 Num2DBuffers               = 0
