--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -115,6 +115,7 @@ IgnoreWindowName           =
 
 [dinput8]
 FilterNonActiveInput       = 0
+UseRawInputForDInput8      = 0
 
 [dsound]
 Num2DBuffers               = 0
