--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -115,7 +115,7 @@ IgnoreWindowName           =
 
 [dinput8]
 FilterNonActiveInput       = 0
-UseRawInputForDInput8      = 0
+UseRawInputForMouse        = 0
 
 [dsound]
 Num2DBuffers               = 0
