--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -91,7 +91,7 @@ WaitForWindowChanges       = 0
 
 [dinput8]
 FilterNonActiveInput       = 0
-UseRawInputForDInput8      = 0
+UseRawInputForMouse        = 0
 
 [dsound]
 Num2DBuffers               = 0
