Ensure mouse button data is not lost

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -114,6 +114,7 @@ SetNamedLayer              =
 IgnoreWindowName           = 
 
 [dinput8]
+DeviceLookupCacheTime      = 0
 FilterNonActiveInput       = 0
 FixHighFrequencyMouse      = 0
 
