--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -90,6 +90,7 @@ ForceWindowResize          = 0
 WaitForWindowChanges       = 0
 
 [dinput8]
+DeviceLookupCacheTime      = 0
 FilterNonActiveInput       = 0
 FixHighFrequencyMouse      = 0
 
