Add options for mouse movement factor and padding

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -117,6 +117,8 @@ IgnoreWindowName           =
 DeviceLookupCacheTime      = 0
 FilterNonActiveInput       = 0
 FixHighFrequencyMouse      = 0
+MouseMovementFactor        = 0
+MouseMovementPadding       = 0
 
 [dsound]
 Num2DBuffers               = 0
