--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -93,6 +93,8 @@ WaitForWindowChanges       = 0
 DeviceLookupCacheTime      = 0
 FilterNonActiveInput       = 0
 FixHighFrequencyMouse      = 0
+MouseMovementFactor        = 0
+MouseMovementPadding       = 0
 
 [dsound]
 Num2DBuffers               = 0
