--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -97,6 +97,7 @@ FullscreenWindowMode       = 0
 ForceExclusiveFullscreen   = 0
 ForceMixedVertexProcessing = 0
 ForceSystemMemVertexCache  = 0
+EnableImgui                = 0
 SetSwapEffectShim          = 0
 DisableMaxWindowedMode     = 0
 ForceDirect3D9On12         = 0
