--- a/dxwrapper.vcxproj
+++ b/dxwrapper.vcxproj
@@ -245,6 +245,7 @@ copy /Y "$(ProjectDir)Settings\Settings.ini" "$(TargetDir)Build\dxwrapper.ini" &
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="d3d8\d3d8.cpp" />
+    <ClCompile Include="d3d9\AddressLookupTable.cpp" />
     <ClCompile Include="d3d9\d3d9.cpp" />
     <ClCompile Include="d3d9\DebugOverlay.cpp" />
     <ClCompile Include="d3d9\IDirect3D9Ex.cpp" />
