Create device from HWND thread

--- a/dxwrapper.vcxproj
+++ b/dxwrapper.vcxproj
@@ -1340,6 +1340,7 @@ copy /Y "$(ProjectDir)Settings\Settings.ini" "$(TargetDir)Build\dxwrapper.ini" &
     <ClInclude Include="GDI\GDI.h" />
     <ClInclude Include="GDI\Gdi32.h" />
     <ClInclude Include="GDI\User32.h" />
+    <ClInclude Include="GDI\WndProc.h" />
     <ClInclude Include="IClassFactory\IClassFactory.h" />
     <ClInclude Include="Libraries\d3dx9.h" />
     <ClInclude Include="libraries\dwmapi.h" />
