Option to prefill surface with color

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -56,6 +56,7 @@ DirectShowEmulation        = 0
 
 [Dd7to9]
 DdrawAutoFrameSkip         = 0
+DdrawFillSurfaceColor      = 0
 DdrawEmulateSurface        = 0
 DdrawEmulateLock           = 0
 DdrawForceMipMapAutoGen    = 0
